--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sinclair TSANA
-description: Midnight is a theme for GitHub Pages.
+description: Je suis un data analist
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-midnight
