--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sinclair TSANA
-description: Je suis un data analist
+description: data analyst
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-midnight
