--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sinclair TSANA
 description: Data Scientist & Data analyst || Excel, R, Python, SQL
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
