--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My Website
+title: TSANA FOBING
 
 # Your name to show in the footer
-author: Some Person
+author: Sinclair TSANA
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -24,7 +24,7 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Author's home: "https://stsana.github.io/"
 
 ################
 # --- Logo --- #
@@ -52,9 +52,9 @@ social-network-links:
   email: "someone@example.com"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
   facebook: deanattali
-  github: daattali
+  github: stsana
   twitter: daattali
-  patreon: DeanAttali
+  patreon: sinclair tsana
   youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
@@ -74,7 +74,7 @@ social-network-links:
 #  ORCID: your ORCID ID
 #  google-scholar: your google scholar
 #  discord: invite/invite_code or users/userid 
-#  kaggle: yourname
+#  kaggle: stsana
 #  hackerrank: yourname
 
 # If you want your website to generate an RSS feed, provide a description
