--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: TSANA FOBING
+title: TSANA FOBING SINCLAIR
 
 # Your name to show in the footer
 author: Sinclair TSANA
